--- a/css/styleCV.css
+++ b/css/styleCV.css
@@ -5,6 +5,7 @@
     /* list-style: none; */
     box-sizing: border-box;
     color: #0b0a0c;
+    font-family: Arial, Helvetica, sans-serif;
 }
 html{
     width: 21cm;
@@ -22,7 +23,8 @@ body{
     width: 100%;
     min-height: 29.7cm;
     background-color: #404E7C;
-    background-color: #9a9faf;
+    /* background-color: #9a9faf; */
+    background-color: #dbdbe6; /*test*/
     position: relative;
     
     /* border: 2px solid blueviolet; */
@@ -51,22 +53,30 @@ header {
     height: 144px;
     /* background-color: #404E7C; */
     overflow: hidden;
+    border-radius: 50%;
 }
 .profilPicture img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 50%;
-    transform: scale(1.5);
+    transform: scale(1.5) translateX(4px);
 }
 .fieldPresentation{
     border-radius: 0 0 0 4pc;
+    /* border: 3px #9a9faf solid; */
+    /* border: 2px #9a9faf double; */
+    border-bottom: 2px #cacad7 double;
+    border-left: 2px #cacad7 double;
 }
 .rangement_droit{
     position: relative;
-    top: 1.55rem;
-    left: 2rem;
+    top: 0.25rem;
+    left: 1.25rem;
     /* right: 0; */
+}
+span.rangement_droit{
+    top: -0.15rem;
 }
 
 .partie_gauche {
@@ -75,14 +85,19 @@ header {
     position: relative;
     /* background-color: #251F47; */
     background-color: #9a9faf;
+    /* background-color: #dbdbe6; */
     /* width: fit-content; */
     /* width: 55%; */
     width: 12.5cm;
-    border-radius: 0 8px 8px 5pc;
+    /* border-radius: 0 8px 8px 5pc; */
+    border-radius: 0 30px 0px 0pc;
     padding-left: 0.8em;
 }
 .partie_gauche fieldset{
     margin: 0 0 0 0.3em;
+    border: 4px black solid;
+    position: relative;
+    left: -5px;
 }
 .formation{
     margin: 0.5em 0 0 0.3em;
@@ -114,6 +129,9 @@ header {
 .experience_ligne li{
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1rem;
+    position: relative;
+    top: -1.4em;
+    max-width: 413px;
 }
 .decalexperience {
     position: relative;
@@ -130,14 +148,14 @@ header {
 }
 .experience_ligne i{
     position: relative;
-    top: -2em;
+    /* top: -2em; */
+    top: -1.8em;
     margin-bottom: 2em;
 }
-.experience_ligne li{
+/* .experience_ligne li{
     position: relative;
-    top: -1.2em;
     max-width: 413px;
-}
+} */
 .partie_droite {
     margin: 0;
     float: right;
@@ -146,6 +164,7 @@ header {
     width: 8cm;
     height: 25cm;
     padding-left: 0.8em;
+    /* background-color: #9a9faf; */
     background-color: #dbdbe6;
     border-radius: 2pc 2pc 2pc 2pc;
     /* font-size: 0.9rem; */
@@ -154,7 +173,7 @@ header {
 .right {
     position: relative;
     padding: 1em;
-    list-style-type: square;
+    /* list-style-type: square; */
     height: 100%;
     /* list-style: blue; */
 }
@@ -167,11 +186,12 @@ header {
 
 legend h2 {
     padding-top: 0.4em;
-    margin-bottom: 0.8rem;
+    /* margin-bottom: 0.8rem; */
 }
 section.experience h2{
     padding-left: 0.4em;
-    margin-bottom: 0.8rem;
+    /* margin-bottom: 0.8rem; */
+    margin-bottom: 0.4rem;
     position: relative;
     left: -1rem;
 }
@@ -182,6 +202,7 @@ h3{
     font-family: Arial, Helvetica, sans-serif;
     /* line-height: 2em; */
     line-height: 1.5rem;
+    list-style-type: circle;
 }
 img.icone{
     width: 48px;
